--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                 parameters = JSON.parse(json);
                 currentTurn = parameters.turn;
                 random = new Random(parameters.seed);
+                numberInput.value = parameters.players.length;
 
                 update();
             }
